# ToyGPURenderer

./: .gitignore  .gitmodules  App  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Renderer  buildThirdParty.py  cmake_install.cmake  renderer.sublime-workspace
glfw-3.3/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw-3.3/examples/: Makefile  cmake_install.cmake  offscreen
glfw-3.3/examples/boing.app/Contents/MacOS/: boing
glfw-3.3/examples/gears.app/Contents/MacOS/: gears
glfw-3.3/examples/heightmap.app/Contents/MacOS/: heightmap
glfw-3.3/examples/particles.app/Contents/MacOS/: particles
glfw-3.3/examples/sharing.app/Contents/MacOS/: sharing
glfw-3.3/examples/simple.app/Contents/MacOS/: simple
glfw-3.3/examples/splitview.app/Contents/MacOS/: splitview
glfw-3.3/examples/wave.app/Contents/MacOS/: wave
glfw-3.3/src/: Makefile  cmake_install.cmake
glfw-3.3/tests/: Makefile  clipboard  cmake_install.cmake  cursor  events  glfwinfo  iconify  monitors  msaa  reopen  vulkan
glfw-3.3/tests/empty.app/Contents/MacOS/: empty
glfw-3.3/tests/gamma.app/Contents/MacOS/: gamma
glfw-3.3/tests/icon.app/Contents/MacOS/: icon
glfw-3.3/tests/inputlag.app/Contents/MacOS/: inputlag
glfw-3.3/tests/joysticks.app/Contents/MacOS/: joysticks
glfw-3.3/tests/opacity.app/Contents/MacOS/: opacity
glfw-3.3/tests/tearing.app/Contents/MacOS/: tearing
glfw-3.3/tests/threads.app/Contents/MacOS/: threads
glfw-3.3/tests/timeout.app/Contents/MacOS/: timeout
glfw-3.3/tests/title.app/Contents/MacOS/: title
glfw-3.3/tests/windows.app/Contents/MacOS/: windows
src/: main.cpp
src/BVH/: AABB.h  BVH.h  CMakeLists.txt
src/Core/: AppBuilder.h  AppWindow.h  AppWindowGLFW.cpp  AppWindowGLFW.h  Application.cpp  Application.h  DirectRenderApp.cpp  DirectRenderApp.h  ImguiUI.h  InteractiveApp.cpp  InteractiveApp.h
src/Core/Common/: Singleton.h
src/Core/Event/: WindowEvent.h
src/Core/JobSys/: Job.h  JobScheduler.cpp  JobScheduler.h  Worker.cpp  Worker.h
src/GLFW/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/GLFW/src/: cmake_install.cmake  glfw3.pc
src/Renderer/: CMakeLists.txt  Camera.cpp  Camera.h  HitInfo.h  Makefile  Material.h  ParallelRenderer.cpp  ParallelRenderer.h  PathTraceRenderer.cpp  PathTraceRenderer.h  RenderView.cpp  RenderView.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  TestScene1.h  VulkanRenderer.cpp  VulkanRenderer.h  cmake_install.cmake
src/Renderer/Accelerate/: AABB.h  BVHStruct.cpp  BVHStruct.h
src/Renderer/Camera/: Camera.h
src/Renderer/Color/: Color.h  ColorFormat.h
src/Renderer/Common/: common.h
src/Renderer/Env/: EnvMapSource.h  IEnvSource.h
src/Renderer/Light/: DirectionalLight.h  ILight.h  PointLight.h
src/Renderer/Material/: Material.h  PBMaterial.cpp  PBMaterial.h
src/Renderer/Material/Shader/: Shader.h
src/Renderer/PathTrace/: IRenderMethod.h  PathTraceRdrMethod.cpp  PathTraceRdrMethod.h
src/Renderer/Random/: IRandom.h  SysRandom.h
src/Renderer/RayTrace/: RayTrace.cpp  RayTrace.h
src/Renderer/RayTraceEngine/: EmbreeEngine.cpp  EmbreeEngine.h  IRayTraceEngine.h  RayTraceEngine.cpp  RayTraceEngine.h
src/Renderer/Shading/: BsdfSample.h  Fresnel.cpp  Fresnel.h  GGX.h
src/Renderer/Shading/Model/: Disney.h
src/Renderer/Task/: Task.h
src/Renderer/Texture/: Texture.cpp  Texture.h  tinyexr.cpp  tinyexr.h
src/VulkanLib/: VulkanInstance.cpp  VulkanInstance.h  vkHelper.cpp  vkHelper.h
src/math/: CMakeLists.txt  Makefile  Matrix4.h  Quaternion.cpp  Quaternion.h  Ray.h  Transform.cpp  Transform.h  Vec3.cpp  Vec3.h  Vec4.h  cmake_install.cmake
src/shape/: CMakeLists.txt  Makefile  Plane.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  cmake_install.cmake
working/: clearImg.comp  clearImg.spv  render.glsl
